# czlog

./: Makefile  Makefile.am  Makefile.in  README.md  binLogExample.c  cborEncoder.c  cborEncoder.h  configure  configure.ac  czlog.pc.in  encoder.h  example.c  jsonEncoder.c  jsonEncoder.h  logger.c  logger.h  private.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: binLogExample.c  example.c
include/: logger.h
src/: Makefile.am  Makefile.in  cborEncoder.c  encoder.c  encoder.h  jsonEncoder.c  logger.c  logger.h  private.c
tests/: check_logger.c
