AC_PREREQ([2.69])
AC_INIT([liblogger], [1.0], [https://github.com/toravir/czlog/issues])
AC_CONFIG_AUX_DIR([build-aux])

AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_AR

AM_INIT_AUTOMAKE([-Wall -Werror foreign])
LT_INIT
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 czlog.pc
 Makefile
 src/Makefile
])

AC_OUTPUT
